--- a/style.css
+++ b/style.css
@@ -158,19 +158,19 @@ body {
     margin-bottom: 100px;
 }
 
-.about-container {
+.about__container {
     width: 100%;
     margin: 50px 0 100px;
     display: flex;
     gap: 100px;
 }
 
-.image-container {
+.about__image_container {
     width: 40%;
     position: relative;
 }
 
-.about-img {
+.about__image {
     width: 90%;
     height: 500px;
     display: block;
@@ -179,7 +179,7 @@ body {
     border-radius: 10px;
 }
 
-.square {
+.component__square {
     width: 100px;
     height: 100px;
     border-radius: 10px;
@@ -191,29 +191,29 @@ body {
     transform: rotate(45deg);
 }
 
-.social-links {
+.about__social_links {
     margin-top: 20px;
     display: flex;
     gap: 20px;
     justify-content: center;
 }
 
-.social-img {
+.about__image_social {
     width: 30px;
     height: 30px;
     opacity: .4;
     transition: .5s;
 }
 
-.social-img:hover {
+.about__image_social:hover {
     opacity: 1;
 }
 
-.info {
+.about__info_container {
     width: 50%;
 }
 
-.info p {
+.about__info_container p {
     font-size: 1.2rem;
     line-height: 2rem;
     margin: 30px 0;
@@ -344,7 +344,7 @@ body {
     padding: 0 10vw;
 }
 
-.filter {
+.project__filter {
     display: flex;
     justify-content: center;
     gap: 20px;
@@ -352,11 +352,11 @@ body {
     margin-bottom: 50px;
 }
 
-.filter .btn {
+.project__filter .button {
     margin-right: 0;
 }
 
-.filter .btn.active {
+.project__filter .button.button__state_active {
     background: #9f5264;
     color: #fff;
 }
@@ -516,7 +516,7 @@ textarea {
     resize: none;
 }
 
-.contact-btn {
+.contact_buttton {
     padding: 10px 20px;
     background: #9f5264;
     color: #fff;
